--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="loader">
         <div id="wrapperload">
             <div class="elem">
-                <img src="./imgs/name.jpeg" alt="">
+                <img src="./img/name.jpeg" alt="">
             </div>
             <div class="elem">
                 <h3>UI/UX Designer</h3>
@@ -23,14 +23,14 @@
                 <h3>loves to help brands.</h3>
             </div>
             <div class="elem">
-                <img src="./imgs/name.jpeg" alt="">
+                <img src="./img/name.jpeg" alt="">
             </div>
         </div>
     </div>
 
     <div id="bg">
         <nav>
-            <img class="navitem" src="./imgs/logo.jpeg" alt="">
+            <img class="navitem" src="./img/logo.jpeg" alt="">
             <div id="nav">
                 <a class="navitem" href="#loader">Home</a>
                 <a class="navitem" href="#profiles">Contact</a>
@@ -46,13 +46,13 @@
                 <img class="name-img" src="./imgs/name.jpeg" alt="">
                 <h5 class="leftitem">a designer from <span id="lblue">chennai.</span></h5>
                 <div class="leftitem" id="playbtn">
-                    <img src="./imgs/playButton.png" alt="">
+                    <img src="./img/playButton.png" alt="">
                     <h5><a class="navitem" href="https://github.com/Trisha3620">SEE MY GIT WORKS</a></span></h5>
                 </div>
                 
             </div>
             <div id="right">
-                <img src="./imgs/mainImage.png" alt="">
+                <img src="./img/mainImage.png" alt="">
             </div>
         </div>
     </div>
