--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="left">
                 <div id="smline"></div>
                 <h4 class="leftitem">Hello, I am 👋</h4>
-                <img class="name-img" src="./imgs/name.jpeg" alt="">
+                <img class="name-img" src="./img/name.jpeg" alt="">
                 <h5 class="leftitem">a designer from <span id="lblue">chennai.</span></h5>
                 <div class="leftitem" id="playbtn">
                     <img src="./img/playButton.png" alt="">
